Fixed week four incorrect alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -42,9 +42,9 @@ html{
 }
 
 	.weekbody{
-		display: inline-flex;
+		display: flex;
 		flex-wrap: wrap;
-		padding-bottom:1.5rem;
+		padding-bottom:2rem;
 	}
 
 		a{
